# simbarag

./: .dockerignore  Dockerfile  README.md  app.py  chunker.py  cleaner.py  docker-compose.yml  image_process.py  index_immich.py  main.py  petmd_scrape_index.py  pyproject.toml  query.py  request.py  startup.sh
raggr-frontend/: package.json
raggr-frontend/src/: .App.tsx.swp  App.css  App.tsx
