[project]
name = "raggr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "ollama>=0.6.0",
    "openai>=2.0.1",
    "pydantic>=2.11.9",
]
